# dfir-ogre-plugin-windows

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  pyproject.toml
configuration/: activity_cache.xml  autoruns.xml  chrome_download_history.xml  chrome_extension.xml  chrome_history.xml  evt.xml  evtx.xml  fastfind_file.xml  fastfind_object.xml  fastfind_registry.xml  firefox_download_history.xml  firefox_extension.xml  firefox_history.xml  get_this.xml  hive.xml  i30_info.xml  ie_webcache.xml  java_idx.xml  list_dll.xml  lnk_batched.xml  merge_file.xml  ntfs_info.xml  object_info.xml  orc_processes_1.xml  orc_processes_2.xml  pca_app_launch.xml  pca_general_record.xml  prefetch.xml  recycle_bin.xml  srum.xml  system_info.xml  tcp_connection.xml  usn_info.xml  volstat.xml  vss_snapshot.xml  wer.xml
configuration/amcache_file/: amcache_driver_xml.xml  amcache_ie_addon.xml  amcache_installer_xml.xml  amcache_program_previous.xml  amcache_program_report.xml  (+1 more)
tests/: __init__.py  test_autoruns.py  test_chrome_extension.py  test_common.py  test_configuration.py  test_csv.py  test_evt.py  test_evtx.py  test_fastfind.py  test_firefox_extension.py  test_get_this.py  test_hive.py  test_i30_info.py  test_ie_webcache.py  test_java_idx.py  test_json.py  test_list_dll.py  test_lnk.py  test_merge.py  test_ntfs_info.py  test_object_info.py  test_orc_processes.py  test_pca.py  test_prefetch.py  test_recycle_bin.py  test_sqlite.py  test_srum.py  test_system_info.py  test_tcp_connection.py  test_usn_info.py  test_vss_snapshot.py  test_wer.py  test_xml.py
(+181 files in other folders)
